2000-07-01  Koundinya K  <kk@ddeorg.soft.net>

        * config.bfd: Change targ_defvec and targ_selvecs for mips*-*-sysv4*
        to add a new target for traditional mips i.e
        bfd_elf32_tradbigmips_vec and bfd_elf32_tradlittlemips_vec.
        * configure.in: Likewise.
        * configure: Rebuild.
        * targets.c (bfd_elf32_tradbigmips_vec): Declare and put in
	bfd_target_vector.
	(bfd_elf32_tradlittlemips_vec): Likewise.
        * elfxx-target.h: Add macro INCLUDED_TARGET_FILE which is more a test
        to see that elfNN_bed does not get redefined even if the target file
        is included twice for a chip. See elf32-mips.c.
	
2000-07-01  Alan Modra  <alan@linuxcare.com.au>

	* Makefile.am (DEP): Fix 2000-06-22.  grep after running dep.sed
	(CLEANFILES): Add DEPA.
	* Makefile.in: Regenerate.

2000-06-30  DJ Delorie  <dj@cygnus.com>
	
	* peicode.h (coff_swap_filehdr_in): can't use e_magic because we
 	can't assume the PE header is at 0x80.

2000-06-29  Mark Elbrecht  <snowball3@bigfoot.com>

	* syms.c (_bfd_stab_section_find_nearest_line): Use IS_ABSOLUTE_PATH.

2000-06-28  Mark Elbrecht  <snowball3@bigfoot.com>

	* go32stub.h: Update stub.

2000-06-26  Marek Michalkiewicz  <marekm@linux.org.pl>

	* archures.c (bfd_mach_avr5): Define.
	* bfd-in2.h (bfd_mach_avr5): Define.
	* cpu-avr.c (arch_info_struct): Rename bfd_mach_avr4 to
	bfd_mach_avr5, add bfd_mach_avr4.  Update comments.
	(compatible): Update comment.  Add missing test.
	* elf32-avr.c (avr_final_link_relocate): Support 8K wrap
	for avr2 and avr4.  Simplify 8K wrap code.
	(bfd_elf_avr_final_write_processing): Recognize bfd_mach_avr5.
	(elf32_avr_object_p): Recognize E_AVR_MACH_AVR5.

2000-06-26  Kazu Hirata  <kazu@hxi.com>

	* coff-h8300.c: Fix formatting.
	* cpu-h8300.c: Likewise.

2000-06-24  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-arm.h (elf32_arm_final_link_relocate): Print `(local)'
	for local symbols whose names are unknown.

2000-06-22  Alan Modra  <alan@linuxcare.com.au>
